typo and added in freddy

--- a/cookbook/appetizers/template-to-repository.html
+++ b/cookbook/appetizers/template-to-repository.html
@@ -77,7 +77,7 @@
                 haven't learned yet.
             </p>
             <p>
-                However, it can a little tricky to figure out how to get these 
+                However, it can be a little tricky to figure out how to get these 
                 code templates into your code repository if you haven't done it 
                 before (or maybe you did, but forgot!).
             </p>
