--- a/cookbook/recipes/two-column-mixed-layouts/page9.html
+++ b/cookbook/recipes/two-column-mixed-layouts/page9.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Two Column Layouts - Mixed (YouTube look-alike)</title>
+        <title>Two Columns - YouTube Look-alike (grid + flex)</title>
         <link href="css/page9.css" rel="stylesheet">
     </head>
     <body>
