update cards demo

--- a/cookbook/meal-prep/cards-and-buttons/page0.html
+++ b/cookbook/meal-prep/cards-and-buttons/page0.html
@@ -8,15 +8,12 @@
     </head>
     <body>
         <!-- 
-            Start of by creating a main element. This is going to be our container for our content. We'll add some styling to it to keep it from getting too wide.
-
-            Then, create an h3 element and a section element. Give the section element and id attribute with a value of "two-column". This section is how we will get our two column layout.
+            Start of by creating a main element. This is going 
+            to be our container for our content. We'll add some 
+            styling to it to keep it from getting too wide.
         -->
-       <main>
-            <h3>Creating Cards in a Two Column Layout</h3>
-            <section id="two-column">
-
-            </section>
-       </main>
+       <div id="main">
+            
+        </div>
     </body>
 </html>
