--- a/cookbook/meal-prep/cards-and-buttons/page10.html
+++ b/cookbook/meal-prep/cards-and-buttons/page10.html
@@ -7,51 +7,74 @@
         <link href="css/page10.css" rel="stylesheet">
     </head>
     <body>
-       <main>
-            <h3>Creating Cards in a Two Column Layout</h3>
-            <section id="two-column">
-                <div id="c1" class="card">
-                    <div class="image-container">
-                        <img src="images/blush.jpg" alt="A blush palette and brush.">
-                    </div>
-                    <h2>Makeup Product</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <a href="#" class="anchor-btn">Learn More</a>
-                </div>
-                <div id="c2" class="card">
-                    <div class="image-container">
-                        <img src="images/eyeshadow.jpg" alt="An eyeshadow palette">
-                    </div>
-                    <h2>Makeup Product</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <a href="#" class="anchor-btn">Learn More</a>
-                </div>
-                <!--
-                    Like before, we can copy our cards and past two more after them. This should generate two additional cards in a second row beneath our first set of cards.
+        <div id="main">
+            <div class="card">
+                <img 
+                    src="images/blush.jpg" 
+                    alt="A blush palette and brush."
+                >
+                <h2>Makeup Product</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur 
+                    adipisicing elit.
+                </p>
+                <a href="#" class="anchor-button">Learn More</a>
+            </div>
+            <div class="card">
+                <img 
+                    src="images/eyeshadow.jpg" 
+                    alt="An eyeshadow palette"
+                >
+                <h2>Eyeshadow</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur 
+                    adipisicing elit.
+                </p>
+                <a href="#" class="anchor-button">Learn More</a>
+            </div>
+            <!--
+                Like before, we can copy our cards and past 
+                two more after them. This should generate two 
+                additional cards in a second row beneath our 
+                first set of cards.
 
-                    The styles we added will effect these cards as well, which is why we won't have to touch the css much after pasting them.
+                The .card styles we added will effect these cards 
+                as well, which is why we won't have to touch 
+                the css much after pasting them.
 
-                    Now let's also go ahead an change their id's, img src and alt attributes to make the content differ. Of course when dealing with an actual assignment, you'll want to make sure to change out the content of the h2 and p element as well. The anchor element if need be.
+                Now let's also go ahead an change their img 
+                src and alt attributes as well as the titles,
+                just to add a bit more variety.
 
-                    That will conclude our demo on cards, buttons, gradients with a cameo from box-shadow and borders!
-                -->
-                <div id="c3" class="card">
-                    <div class="image-container">
-                        <img src="images/concealer.jpg" alt="A concealer palette">
-                    </div>
-                    <h2>Makeup Product</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <a href="#" class="anchor-btn">Learn More</a>
-                </div>
-                <div id="c4" class="card">
-                    <div class="image-container">
-                        <img src="images/lipstick.jpg" alt="A lipstick.">
-                    </div>
-                    <h2>Makeup Product</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <a href="#" class="anchor-btn">Learn More</a>
-                </div>
-            </section>
-       </main>
+                ...but now, our cards don't look too good.
+                They're all smooshed together.  We have one
+                last bit of CSS to write to clean things up
+                before we wrap up!
+            -->
+            <div class="card">
+                <img 
+                    src="images/concealer.jpg" 
+                    alt="A concealer palette"
+                >
+                <h2>Concealer Palette</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur 
+                    adipisicing elit.
+                </p>
+                <a href="#" class="anchor-button">Learn More</a>
+            </div>
+            <div class="card">
+                <img 
+                    src="images/lipstick.jpg" 
+                    alt="A lipstick"
+                >
+                <h2>Lipstick</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur 
+                    adipisicing elit.
+                </p>
+                <a href="#" class="anchor-button">Learn More</a>
+            </div>
+        </div>
     </body>
 </html>
