--- a/cookbook/meal-prep/cards-and-buttons/page2.html
+++ b/cookbook/meal-prep/cards-and-buttons/page2.html
@@ -7,25 +7,32 @@
         <link href="css/page2.css" rel="stylesheet">
     </head>
     <body>
-       <main>
-            <h3>Creating Cards in a Two Column Layout</h3>
-            <section id="two-column">
-                <div id="c1" class="card">
-                    <div class="image-container">
-                        <img src="images/blush.jpg" alt="A blush palette and brush.">
-                    </div>
-                    <!--
-                        Now let's add some additonal content. We'll add an h2, p, and anchor element.
+       <div id="main">
+            <div class="card">
+                <img 
+                    src="images/blush.jpg" 
+                    alt="A blush palette and brush."
+                >
+                <!--
+                    Now let's add some additonal content. 
+                    We'll add an h2, p, and anchor element.
 
-                        We'll give the anchor element a class of anchor-btn. This is because we want our anchor element to look like a button but function like an anchor element.
+                    We'll give the anchor element a class of 
+                    "anchor-button". This is because we want our 
+                    anchor element to look like a button but 
+                    function like an anchor element.
 
-                        With these elements in, our card's skeleton is now complete. Now, let's make it look and feel more like a card.
-                    -->
-                    <h2>Makeup Product</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <a href="#" class="anchor-btn">Learn More</a>
-                </div>
-            </section>
-       </main>
+                    With these elements in, our card's skeleton 
+                    is now complete. Now, let's make it look 
+                    and feel more like a card.
+                -->
+                <h2>Makeup Product</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur 
+                    adipisicing elit.
+                </p>
+                <a href="#" class="anchor-button">Learn More</a>
+            </div>
+        </div>
     </body>
 </html>
