--- a/cookbook/meal-prep/cards-and-buttons/page5.html
+++ b/cookbook/meal-prep/cards-and-buttons/page5.html
@@ -7,18 +7,19 @@
         <link href="css/page5.css" rel="stylesheet">
     </head>
     <body>
-       <main>
-            <h3>Creating Cards in a Two Column Layout</h3>
-            <section id="two-column">
-                <div id="c1" class="card">
-                    <div class="image-container">
-                        <img src="images/blush.jpg" alt="A blush palette and brush.">
-                    </div>
-                    <h2>Makeup Product</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <a href="#" class="anchor-btn">Learn More</a>
-                </div>
-            </section>
-       </main>
+        <div id="main">
+            <div class="card">
+                <img 
+                    src="images/blush.jpg" 
+                    alt="A blush palette and brush."
+                >
+                <h2>Makeup Product</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur 
+                    adipisicing elit.
+                </p>
+                <a href="#" class="anchor-button">Learn More</a>
+            </div>
+        </div>
     </body>
 </html>
