--- a/cookbook/examples/heroes/hero-3.html
+++ b/cookbook/examples/heroes/hero-3.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Heroes (Exercise)</title>
+        <title>Three Heroes (Exercise)</title>
         <link href="css/page8.css" rel="stylesheet">
     </head>
     <body>
