--- a/cookbook/meal-prep/three-heroes/page1.html
+++ b/cookbook/meal-prep/three-heroes/page1.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Three Heroes (Exercise)</title>
-        <link href="css/page8.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
         <div id="hero-3">
@@ -12,7 +12,7 @@
                 <h2>Relax</h2>
                 <h4>Take a deep breath</h4>
                 <div>
-                    <a href="hero-3.html">TAKE THE NEXT STEP</a>
+                    <a href="page2.html">TAKE THE NEXT STEP</a>
                 </div>
             </div>
         </div>
