--- a/cookbook/meal-prep/three-heroes/page2.html
+++ b/cookbook/meal-prep/three-heroes/page2.html
@@ -4,15 +4,15 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Three Heroes (Exercise)</title>
-        <link href="css/page8.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        <div id="hero-3">
+        <div id="hero-4">
             <div class="hero-content">
-                <h2>Relax</h2>
-                <h4>Take a deep breath</h4>
+                <h2>Make a Wish</h2>
+                <h4>The stars are bright tonight</h4>
                 <div>
-                    <a href="hero-3.html">TAKE THE NEXT STEP</a>
+                    <a href="page0.html">RETURN TO THE BEGINNING</a>
                 </div>
             </div>
         </div>
