--- a/cookbook/meal-prep/three-heroes/page0.html
+++ b/cookbook/meal-prep/three-heroes/page0.html
@@ -4,13 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Three Heroes (Exercise)</title>
-        <link href="css/page8.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
         <div id="hero-2">
             <h2>Feeling lost?</h2>
             <h4>Don't worry, so are we</h4>
-            <a href="hero-2.html">FOLLOW ALONG</a>
+            <a href="page1.html">FOLLOW ALONG</a>
         </div>
     </body>
 </html>
