--- a/cookbook/recipes/gallery-grid-basic/page1.html
+++ b/cookbook/recipes/gallery-grid-basic/page1.html
@@ -15,27 +15,27 @@
             </p>
             <h3>Landscape Gallery</h3>
             <div class="basic-grid-gallery">
-                <img src="images/tea_L1.jpg" alt="coffee">
-                <img src="images/tea_L2.jpg" alt="coffee">
-                <img src="images/tea_L3.jpg" alt="coffee">
-                <img src="images/tea_L4.jpg" alt="coffee">
-                <img src="images/tea_L5.jpg" alt="coffee">
-                <img src="images/tea_L6.jpg" alt="coffee">
-                <img src="images/tea_L7.jpg" alt="coffee">
-                <img src="images/tea_L8.jpg" alt="coffee">
-                <img src="images/tea_L9.jpg" alt="coffee">
+                <img src="images/tea_L1.jpg" alt="tea">
+                <img src="images/tea_L2.jpg" alt="tea">
+                <img src="images/tea_L3.jpg" alt="tea">
+                <img src="images/tea_L4.jpg" alt="tea">
+                <img src="images/tea_L5.jpg" alt="tea">
+                <img src="images/tea_L6.jpg" alt="tea">
+                <img src="images/tea_L7.jpg" alt="tea">
+                <img src="images/tea_L8.jpg" alt="tea">
+                <img src="images/tea_L9.jpg" alt="tea">
             </div>
             <h3>Portrait Gallery</h3>
             <div class="basic-grid-gallery">
-                <img src="images/tea_P1.jpg" alt="coffee">
-                <img src="images/tea_P2.jpg" alt="coffee">
-                <img src="images/tea_P3.jpg" alt="coffee">
-                <img src="images/tea_P4.jpg" alt="coffee">
-                <img src="images/tea_P5.jpg" alt="coffee">
-                <img src="images/tea_P6.jpg" alt="coffee">
-                <img src="images/tea_P7.jpg" alt="coffee">
-                <img src="images/tea_P8.jpg" alt="coffee">
-                <img src="images/tea_P9.jpg" alt="coffee">
+                <img src="images/tea_P1.jpg" alt="tea">
+                <img src="images/tea_P2.jpg" alt="tea">
+                <img src="images/tea_P3.jpg" alt="tea">
+                <img src="images/tea_P4.jpg" alt="tea">
+                <img src="images/tea_P5.jpg" alt="tea">
+                <img src="images/tea_P6.jpg" alt="tea">
+                <img src="images/tea_P7.jpg" alt="tea">
+                <img src="images/tea_P8.jpg" alt="tea">
+                <img src="images/tea_P9.jpg" alt="tea">
             </div>
         </div>
     </body>
