--- a/cookbook/recipes/gallery-masonry-vertical-flex/page0.html
+++ b/cookbook/recipes/gallery-masonry-vertical-flex/page0.html
@@ -3,27 +3,28 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Gallery - Horizontal Masonry (flex)</title>
-        <link href="css/page1.css" rel="stylesheet">
+        <title>Gallery - Vertical Masonry (flex)</title>
+        <link href="css/page0.css" rel="stylesheet">
     </head>
     <body>
         <div id="layout">
-            <h1>Gallery - Horizontal Masonry (flex)</h1>
+            <h1>Gallery - Vertical Masonry (flex)</h1>
             <p>
-                We're going to use Flexbox to create the 
-                masonry layout, taking advantage of its 
-                ability to wrap, along with the ability of 
-                Flex Items to grow to fill their containers,
-                or rows in this case.
+                Masonry layouts are named after the construction
+                approach of building a stone wall by laying
+                stones of different sizes side-by-side or on 
+                top of each other to create a cohesive whole.
             </p>
             <p>
-                Unfortunately, we lose a bit of image detail 
-                since we need to crop them, so that
-                they don't get distorted.
+                Masonry galleries are great because they can 
+                usually handle images of any size or dimension,
+                as we'll see after transforming the mess of
+                images below into a vertical masonry gallery
+                using Flexbox.
             </p>
             <h3>Mixed Gallery</h3>
-            <div class="horizontal-masonry-gallery">
-                <img src="images/coffee_P3.jpg" alt="coffee">
+            <div class="vertical-masonry-gallery">
+                <img src="images/coffee_P2.jpg" alt="coffee">
                 <img src="images/coffee_L1.jpg" alt="coffee">
                 <img src="images/coffee_P1.jpg" alt="coffee">
                 <img src="images/coffee_L3.jpg" alt="coffee">
