--- a/cookbook/recipes/gallery-masonry-vertical-flex/page3.html
+++ b/cookbook/recipes/gallery-masonry-vertical-flex/page3.html
@@ -3,15 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Gallery - Horizontal Masonry (flex)</title>
+        <title>Gallery - Vertical Masonry (flex)</title>
         <link href="css/page3.css" rel="stylesheet">
     </head>
     <body>
         <div id="layout">
-            <h1>Gallery - Horizontal Masonry (flex)</h1>
+            <h1>Gallery - Vertical Masonry (flex)</h1>
             <h3>Mixed Gallery</h3>
-            <div class="horizontal-masonry-gallery">
-                <img src="images/coffee_P3.jpg" alt="coffee">
+            <div class="vertical-masonry-gallery">
+                <img src="images/coffee_P2.jpg" alt="coffee">
                 <img src="images/coffee_L1.jpg" alt="coffee">
                 <img src="images/coffee_P1.jpg" alt="coffee">
                 <img src="images/coffee_L3.jpg" alt="coffee">
