--- a/cookbook/meal-prep/cards-and-buttons/page4.html
+++ b/cookbook/meal-prep/cards-and-buttons/page4.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Cards, Buttons, and Gradients</title>
+        <title>Cards, Buttons, and Gradients (Demo)</title>
         <link href="css/page4.css" rel="stylesheet">
     </head>
     <body>
