basic navbars demo

--- a/cookbook/meal-prep/navbars-basic/page5.html
+++ b/cookbook/meal-prep/navbars-basic/page5.html
@@ -16,10 +16,13 @@
             <a href="#">Link 3</a>
             <!--
                 To turn this last anchor into a button,
-                we'll need to give it an id so that we 
+                we'll need to give it a class so that we 
                 can target it.
+
+                We'll also update the button content to
+                be a more realistic CTA.
             -->
-            <a href="#" id="cta-button">Link 4</a>
+            <a href="#" class="cta-button">Sign up</a>
         </div>
     </body>
 </html>
