--- a/cookbook/meal-prep.html
+++ b/cookbook/meal-prep.html
@@ -41,6 +41,7 @@
                             <h2><a href="meal-prep.html?category=week2">Week 2</a></h2>
                             <h2><a href="meal-prep.html?category=week3">Week 3</a></h2>
                             <h2><a href="meal-prep.html?category=week4">Week 4</a></h2>
+                            <h2><a href="meal-prep.html?category=week5">Week 5</a></h2>
                         </div>
                     </div>
                     <h2><a href="./">Student Resources</a></h2>
