--- a/cookbook/examples/indigo-sphere/index.html
+++ b/cookbook/examples/indigo-sphere/index.html
@@ -83,6 +83,88 @@
                     </a>
                 </div>
             </div>
+            <div class="section halloween-grid">
+                <div id="halloween-text">
+                    <h4>Editors' Pick</h4>
+                    <h2>Halloween Shop</h2>
+                    <a href="#">See More</a>
+                </div>
+                <div id="halloween-image-1">
+                    <img src="images/halloween1.avif" alt="halloween">
+                </div>
+                <div id="halloween-image-2">
+                    <img src="images/halloween2.avif" alt="halloween">
+                </div>
+                <div id="halloween-image-3">
+                    <img src="images/halloween3.avif" alt="halloween">
+                </div>
+                <div id="halloween-image-4">
+                    <img src="images/halloween4.avif" alt="halloween">
+                </div>
+                <div id="halloween-image-5">
+                    <img src="images/halloween5.webp" alt="halloween">
+                </div>
+            </div>
+            <div class="section masonry">
+                <div id="gift-text">
+                    <h4>Most Popular</h4>
+                    <h2>Our 2023 Gift Guide</h2>
+                    <a href="#">See More</a>
+                </div>
+                <div>
+                    <img src="images/bedroom.webp" alt="gifts">
+                </div>
+                <div>
+                    <img src="images/xmas1.avif" alt="gifts">
+                </div>
+                <div>
+                    <img src="images/xmas2.avif" alt="gifts">
+                </div>
+                <div>
+                    <img src="images/dining-room.webp" alt="gifts">
+                </div>
+                <div>
+                    <img src="images/patio.webp" alt="gifts">
+                </div>
+                <div>
+                    <img src="images/xmas3.avif" alt="gifts">
+                </div>
+                <div>
+                    <img src="images/gift1.avif" alt="gifts">
+                </div>
+                <div>
+                    <img src="images/gift2.avif" alt="gifts">
+                </div>
+            </div>
+        </div>
+        <div id="footer">
+            <div id="footer-columns-navbar">
+                <div>
+                    <a class="nav-item" href="#">Clothing</a>
+                    <a class="nav-item" href="#">Stickers</a>
+                    <a class="nav-item" href="#">Phone Cases</a>
+                    <a class="nav-item" href="#">Wall Art</a>
+                </div>
+                <div>
+                    <a class="nav-item" href="#">Home & Living</a>
+                    <a class="nav-item" href="#">Kids & Babies</a>
+                    <a class="nav-item" href="#">Pets</a>
+                    <a class="nav-item" href="#">Accessories</a>
+                </div>
+                <div>
+                    <a class="nav-item" href="#">Stationary & Office</a>
+                    <a class="nav-item" href="#">Gifts</a>
+                    <a class="nav-item" href="#">Returns</a>
+                    <a class="nav-item" href="#">Pre-orders</a>
+                </div>
+            </div>
+            <div id="footer-navbar">
+                <span>&copy; IndigoSphere 2023</span>
+                <a href="#">Contact</a>
+                <a href="#">Policies</a>
+                <a href="#">Privacy Notice</a>
+                <a href="#">Help Center</a>
+            </div>
         </div>
     </body>
 </html>
