--- a/cookbook/examples/foxtail-farms/about.html
+++ b/cookbook/examples/foxtail-farms/about.html
@@ -5,6 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>About - Foxtail Farms (Exercise)</title>
         <link href="css/style.css" rel="stylesheet">
+        <!--
+            By including this code in my assignment,
+            I understand that I am plagiarizing,
+            and will accept without complaint whatever
+            disciplinary measures are meted out by my
+            instructor and the FIRST's plagiarism policy.
+        -->
     </head>
     <body>
         <div id="header-1">
