--- a/cookbook/examples/hover-galleries-flip-cards/index.html
+++ b/cookbook/examples/hover-galleries-flip-cards/index.html
@@ -5,6 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Hover Galleries - Flip Cards (Exercise)</title>
         <link href="css/page0.css" rel="stylesheet">
+        <!--
+            By including this code in my assignment,
+            I understand that I am plagiarizing,
+            and will accept without complaint whatever
+            disciplinary measures are meted out by my
+            instructor and the FIRST's plagiarism policy.
+        -->
     </head>
     <body>
         <h2>Hover Gallery 3</h2>
