--- a/cookbook/examples/media-queries/index.html
+++ b/cookbook/examples/media-queries/index.html
@@ -4,6 +4,13 @@
         <title>Media Queries (Exercise)</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="css/style.css">
+        <!--
+            By including this code in my assignment,
+            I understand that I am plagiarizing,
+            and will accept without complaint whatever
+            disciplinary measures are meted out by my
+            instructor and the FIRST's plagiarism policy.
+        -->
     </head>
     <body>
         <div id="nav">
