--- a/cookbook/examples/trek-cards/index.html
+++ b/cookbook/examples/trek-cards/index.html
@@ -7,6 +7,13 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link href="css/setup.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
+        <!--
+            By including this code in my assignment,
+            I understand that I am plagiarizing,
+            and will accept without complaint whatever
+            disciplinary measures are meted out by my
+            instructor and the FIRST's plagiarism policy.
+        -->
     </head>
     <body>
         <div id="section-1">
