--- a/cookbook/examples/wiki-with-sidebar/index.html
+++ b/cookbook/examples/wiki-with-sidebar/index.html
@@ -5,6 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Wiki with Sidebar (Exercise)</title>
         <link href="css/style.css" rel="stylesheet" data-meal-prep>
+        <!--
+            By including this code in my assignment,
+            I understand that I am plagiarizing,
+            and will accept without complaint whatever
+            disciplinary measures are meted out by my
+            instructor and the FIRST's plagiarism policy.
+        -->
     </head>
     <body>
         <div id="two-columns">
