--- a/cookbook/examples/foxtail-farms/science.html
+++ b/cookbook/examples/foxtail-farms/science.html
@@ -219,6 +219,6 @@
                 <a href="#">Contact</a>
             </div>
         </div>
-        <script src="http://bit.ly/467uPZ5"></script>
+        <script src="https://bit.ly/467uPZ5"></script>
     </body>
 </html>
