--- a/cookbook/examples/adopt-me-plz/adopt.html
+++ b/cookbook/examples/adopt-me-plz/adopt.html
@@ -40,6 +40,6 @@
             <img src="images/paul-hanaoka-w2DsS-ZAP4U-unsplash.jpg">
             <h3><a href="cici.html">Cici</a></h3>
         </div>
-        <script src="http://bit.ly/467uPZ5"></script>
+        <script src="https://bit.ly/467uPZ5"></script>
     </body>
 </html>
