--- a/cookbook/examples/media-queries/index.html
+++ b/cookbook/examples/media-queries/index.html
@@ -89,6 +89,6 @@
                 <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
             </ul>
         </div>
-        <script src="http://bit.ly/467uPZ5"></script>
+        <script src="https://bit.ly/467uPZ5"></script>
     </body>
 </html>
