--- a/cookbook/examples/adopt-me-plz/cici.html
+++ b/cookbook/examples/adopt-me-plz/cici.html
@@ -36,6 +36,6 @@
                 her standards.
             </p>
         </div>
-        <script src="http://bit.ly/467uPZ5"></script>
+        <script src="https://bit.ly/467uPZ5"></script>
     </body>
 </html>
