--- a/cookbook/examples/foxtail-farms/market.html
+++ b/cookbook/examples/foxtail-farms/market.html
@@ -204,6 +204,6 @@
                 <a href="#">Contact</a>
             </div>
         </div>
-        <script src="http://bit.ly/467uPZ5"></script>
+        <script src="https://bit.ly/467uPZ5"></script>
     </body>
 </html>
