--- a/cookbook/examples/grrm/index.html
+++ b/cookbook/examples/grrm/index.html
@@ -198,6 +198,6 @@
             </div>
             <div id="bottom"></div>
         </div>
-        <script src="http://bit.ly/467uPZ5"></script>
+        <script src="https://bit.ly/467uPZ5"></script>
     </body>
 </html>
