--- a/cookbook/examples/indigo-sphere/index.html
+++ b/cookbook/examples/indigo-sphere/index.html
@@ -173,6 +173,6 @@
                 <a href="#">Help Center</a>
             </div>
         </div>
-        <script src="http://bit.ly/467uPZ5"></script>
+        <script src="https://bit.ly/467uPZ5"></script>
     </body>
 </html>
