--- a/cookbook/examples/metube/index.html
+++ b/cookbook/examples/metube/index.html
@@ -295,6 +295,6 @@
                 </div>
             </div>
         </div>
-        <script src="http://bit.ly/467uPZ5"></script>
+        <script src="https://bit.ly/467uPZ5"></script>
     </body>
 </html>
