--- a/cookbook/examples/product-comparison-site/index.html
+++ b/cookbook/examples/product-comparison-site/index.html
@@ -97,6 +97,6 @@
                 </div>
             </div>
         </div>
-        <script src="http://bit.ly/467uPZ5"></script>
+        <script src="https://bit.ly/467uPZ5"></script>
     </body>
 </html>
