--- a/cookbook/examples/product-showcase-site/index.html
+++ b/cookbook/examples/product-showcase-site/index.html
@@ -108,6 +108,6 @@
                 </p>
             </div>
         </div>
-        <script src="http://bit.ly/467uPZ5"></script>
+        <script src="https://bit.ly/467uPZ5"></script>
     </body>
 </html>
