--- a/cookbook/examples/wiki-with-sidebar/index.html
+++ b/cookbook/examples/wiki-with-sidebar/index.html
@@ -264,6 +264,6 @@
                 </p>
             </div>
         </div>
-        <script src="http://bit.ly/467uPZ5"></script>
+        <script src="https://bit.ly/467uPZ5"></script>
     </body>
 </html>
