--- a/cookbook/examples/foxtail-farms/market.html
+++ b/cookbook/examples/foxtail-farms/market.html
@@ -197,10 +197,10 @@
         </div>
         <div id="footer">
             <div class="navbar">
-                <a href="#">Market</a>
+                <a href="market.html">Market</a>
                 <a href="#">Recipes</a>
-                <a href="#">Science</a>
-                <a href="#">About Us</a>
+                <a href="science.html" class="active">Science</a>
+                <a href="about.html">About Us</a>
                 <a href="#">Contact</a>
             </div>
         </div>
