--- a/cookbook/examples/foxtail-farms/science.html
+++ b/cookbook/examples/foxtail-farms/science.html
@@ -212,10 +212,10 @@
         <div id="footer">
             <div class="navbar">
                 <span>&copy; Foxtail Farms 2023</span>
-                <a href="#">Market</a>
+                <a href="market.html">Market</a>
                 <a href="#">Recipes</a>
-                <a href="#">Science</a>
-                <a href="#">About Us</a>
+                <a href="science.html" class="active">Science</a>
+                <a href="about.html">About Us</a>
                 <a href="#">Contact</a>
             </div>
         </div>
