--- a/cookbook/examples/restaurant/index.html
+++ b/cookbook/examples/restaurant/index.html
@@ -47,7 +47,7 @@
                     </div>
                 </div>
                 <div id="sub-navbar">
-                    <a href="menu.html">OUR MENU</a>
+                    <a href="#">OUR MENU</a>
                     <a href="#">ABOUT US</a>
                     <a href="#">ORDER</a>
                     <a href="#">LOCATIONS</a>
