--- a/cookbook/meal-prep/restaurant-home/page0.html
+++ b/cookbook/meal-prep/restaurant-home/page0.html
@@ -40,7 +40,7 @@
                     </div>
                 </div>
                 <div id="sub-navbar">
-                    <a href="#">OUR MENU</a>
+                    <a href="menu.html">OUR MENU</a>
                     <a href="#">ABOUT US</a>
                     <a href="#">ORDER</a>
                     <a href="#">LOCATIONS</a>
