--- a/cookbook/appetizers/adding-a-menu-wordpress.html
+++ b/cookbook/appetizers/adding-a-menu-wordpress.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Rearranging Your Workspace - Appetizers - The Coding Cookbook</title>
+        <title>Adding a Custom Navbar (WordPress) - Appetizers - The Coding Cookbook</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link href="../css/cookbook.css" rel="stylesheet">
         <link href="../css/appetizer.css" rel="stylesheet">
@@ -59,7 +59,7 @@
         </nav>
         
         <header id="title" class="">
-            <h1>Adding a Navbar (WordPress)</h1>
+            <h1>Adding a Custom Navbar (WordPress)</h1>
             <h3>
                 A tutorial showing how you can add a custom navbar to your
                 WordPress site
@@ -124,7 +124,7 @@
         <div class="cookbookPage">
             <h2 id="part1" class="invisibleAnchorTarget"></h2>
             <h6></h6>
-            <h2>Adding a Navbar (Menu) to your WordPress Site</h2>
+            <h2>Adding a Custom Navbar (Menu) to your WordPress Site</h2>
             <h4>Watch the video below to see how!</h4>
             <video controls>
                 <source src="video/adding-a-menu-wordpress.mp4" type="video/mp4">
