--- a/cookbook/appetizers/adding-a-menu-wordpress.html
+++ b/cookbook/appetizers/adding-a-menu-wordpress.html
@@ -61,7 +61,7 @@
         <header id="title" class="">
             <h1>Adding a Custom Navbar (WordPress)</h1>
             <h3>
-                A tutorial showing how you can add a custom navbar to your
+                A video tutorial showing how you can add a custom navbar to your
                 WordPress site
             </h3>
         </header>
@@ -123,9 +123,6 @@
         
         <div class="cookbookPage">
             <h2 id="part1" class="invisibleAnchorTarget"></h2>
-            <h6></h6>
-            <h2>Adding a Custom Navbar (Menu) to your WordPress Site</h2>
-            <h4>Watch the video below to see how!</h4>
             <video controls>
                 <source src="video/adding-a-menu-wordpress.mp4" type="video/mp4">
                 Sorry, your browser doesn't support the &lt;video&gt; tag
