--- a/cookbook/meal-prep.html
+++ b/cookbook/meal-prep.html
@@ -43,6 +43,7 @@
                             <h2><a href="meal-prep.html?category=week4">Week 4</a></h2>
                             <h2><a href="meal-prep.html?category=week5">Week 5</a></h2>
                             <h2><a href="meal-prep.html?category=week6">Week 6</a></h2>
+                            <h2><a href="meal-prep.html?category=week8">Week 8</a></h2>
                         </div>
                     </div>
                     <h2><a href="./">Student Resources</a></h2>
