including js in meal-prep

--- a/cookbook/appetizers.html
+++ b/cookbook/appetizers.html
@@ -90,6 +90,8 @@
                 <div id="htmlPreview"></div>
                 <h4 id="recipeDetailsHeadingCSS">CSS</h4>
                 <div id="cssPreview"></div>
+                <h4 id="recipeDetailsHeadingJS">JavaScript</h4>
+                <div id="jsPreview"></div>
             </div>
             <div id="cookbookPageColumnTwo">
                 <div id="previewContainer">
