--- a/cookbook/meal-prep/function-game/page1.html
+++ b/cookbook/meal-prep/function-game/page1.html
@@ -40,7 +40,7 @@
         
         <script src="js/adventure-library.js"></script>
         <script src="js/initialize-adventure-alt.js"></script>
-        <script src="js/adventure-assignment.js"></script>
+        <script src="js/adventure-assignment.js" data-meal-prep></script>
         <script src="js/connect-buttons.js"></script>
     </body>
 </html>
