--- a/cookbook/recipes/contact-form/page0.html
+++ b/cookbook/recipes/contact-form/page0.html
@@ -89,6 +89,7 @@
                 </form>
             </main>
             <footer>
+                <h2>Oh, you want more?</h2>
                 <p>
                     To make a form like this functional, try creating
                     an account at 
@@ -97,9 +98,10 @@
                     </a>.
                 </p>
                 <p>
-                    Then, copy the <b>Form Endpoint</b> URL and pass 
-                    it into the &lt;form&gt;'s <i>action</i> attribute,
-                    as well as set the <i>method</i> attribute to "POST".
+                    Then, copy the <b>Form Endpoint</b> URL they provide
+                    you with, and set it as the &lt;form&gt;'s 
+                    <i>action</i> attribute, as well as set the 
+                    <i>method</i> attribute to "POST".
                 </p>
                 <p>
                     That should make your form functional, and you can
