google fonts ui update

--- a/cookbook/appetizers/google-fonts.html
+++ b/cookbook/appetizers/google-fonts.html
@@ -157,16 +157,17 @@
                             </p>
                             <p>
                                 In that case, you'll probably want to take 
-                                advantage of the "Categories" filter.
+                                advantage of filters like "Decorative Stroke" or
+                                "Classification".
                             </p>
                             <p>
-                                Clicking on "Categories" will bring up a 
-                                dropdown menu with five options very similar to
-                                the five generic font families we learned about
-                                in class.
+                                For instance, clicking on "Handwriting" under 
+                                "Decorative Stroke" will apply a filter to 
+                                the search results only showing fonts tagged as 
+                                handwriting fonts.
                             </p>
                             <p>
-                                You can select whichever categories you want to
+                                You can select whichever filters you want to
                                 search for, and once you do, the search results
                                 will update themselves accordingly.
                             </p>
@@ -283,30 +284,26 @@
                             </p>
                             <p>
                                 In addition, there's a little circle that
-                                appeared on top of the icon with the squares
-                                at the top right of the page. 
+                                appeared on top of the icon of the shopping bag
+                                at the top right of the page. This is where 
+                                all the fonts we select are collected.
                             </p>
                             <p>
-                                I like to think of this option as our "shopping
-                                cart", so to speak, since this is where all the 
-                                fonts we select are collected.
-                            </p>
-                            <p>
-                                Go ahead and click on the squares to open up
-                                our "shopping cart".
+                                Go ahead and click on the shopping bag icon
+                                to show your selected font(s).
                             </p>
                             <p class="indent">
-                                NOTE: You may find that the "shopping cart" opens
+                                NOTE: You may find that the "shopping bag" opens
                                 up on its own the first time you select a font.
                             </p>
                         </div>
                         <div class="imageContainer">
                             <img 
                                 src="images/google-fonts/05_selectstyle2.png" 
-                                alt="Opening the 'shopping cart' of fonts" 
+                                alt="Opening the 'shopping bag' of fonts" 
                             />
                             <figcaption>
-                                Opening the "shopping cart" of fonts
+                                Opening the "shopping bag" of fonts
                             </figcaption>
                         </div>
                     </div>
@@ -315,8 +312,9 @@
                     <div class="sideBySide">
                         <div class="textContainer">
                             <p>
-                                After the "shopping cart" is opened, at the top 
-                                of it, you should see the font families that
+                                After the "shopping bag" is clicked, a side 
+                                panel will slide open from the right. At the top 
+                                of it, you should see the font family that
                                 we've selected.
                             </p>
                             <p>
@@ -384,18 +382,16 @@
                                 Now we have access to a CSS code snippet to
                                 include in our CSS...sort of.
                             </p>
-                            <p>
+                            <p class="indent">
                                 See those &lt;style&gt; tags in there?  That's 
-                                HTML code, and we don't want that.
-                            <p>
+                                HTML code, and we don't want that. However, the
+                                HTML &lt;style&gt; element is unique in that 
+                                whatever code is put inside of it is 
+                                processed as CSS.
                             </p>
-                                However, the 
-                                &lt;style&gt; element is unique in that whatever 
-                                code is put inside of it is processed as CSS.
-                            </p>
-                            <p>
-                                So it's the code in between the &lt;style&gt; tags
-                                that we want to copy.
+                            <p class="indent">
+                                It's the code <i>in between</i> the 
+                                &lt;style&gt; tags that is the CSS we want.
                             </p>
                             <p>
                                 Select and copy the code in between the 
@@ -428,7 +424,8 @@
                             </p>
                             <p>
                                 We've made the font available for us to use, but
-                                we haven't actually used it anywhere yet.
+                                we haven't actually used it anywhere on the 
+                                page yet.
                             </p>
                             <p>
                                 To do so, look at the code field beneath the 
@@ -504,7 +501,7 @@
                                 "Select" link to the far right.
                             </p>
                             <p>
-                                Let's go ahead and select the top four to see
+                                Let's go ahead and select the top three to see
                                 what happens.
                             </p>
                         </div>
@@ -523,7 +520,7 @@
                     <div class="sideBySide">
                         <div class="textContainer">
                             <p>
-                                If we jump back to our "shopping cart", we'll
+                                If we jump back to our "shopping bag", we'll
                                 see that those new Styles we selected are now 
                                 in there too.
                             </p>
@@ -535,10 +532,10 @@
                         <div class="imageContainer">
                             <img 
                                 src="images/google-fonts/11_newfont3.png" 
-                                alt="Our selected Tektur styles in the 'shopping cart'" 
+                                alt="Our selected Tektur styles in the 'shopping bag'" 
                             />
                             <figcaption>
-                                Our selected Tektur styles in the "shopping cart"
+                                Our selected Tektur styles in the "shopping bag"
                             </figcaption>
                         </div>
                     </div>
@@ -563,7 +560,7 @@
                                 So if you want to use multiple Google Font font 
                                 families on a web page, you don't need to have 
                                 multiple @import lines of code; as long as you
-                                have them all grouped in the same "shopping cart",
+                                have them all grouped in the same "shopping bag",
                                 you should only need one single @import line to 
                                 make them all available.
                             </p>
