recipe card href update

--- a/cookbook/index.html
+++ b/cookbook/index.html
@@ -78,40 +78,74 @@
         
         <div id="cookbookPage" class="recipeCards cookbookWithLinks">
             <div id="cookbookPageColumnOne">
-                <div class="cookbookRecipe">
-                    <h2 class="recipeHeading">
-                        <a 
-                            href="ingredients.html" 
-                            class="recipeLink" 
-                        >
+                <a 
+                    href="ingredients.html" 
+                    class="recipeLink" 
+                >
+                    <div class="cookbookRecipe">
+                        <h2 class="recipeHeading">
                             HTML Ingredients
-                        </a>
-                        <span class="recipeDots"></span>
-                    </h2>
-                    <div class="recipePreview">
-                        <img 
-                            src="images/ingredients.png" 
-                        >
-                        <div class="recipeOverlay"></div>
+                            <span class="recipeDots"></span>
+                        </h2>
+                        <div class="recipePreview">
+                            <img 
+                                src="images/ingredients.png" 
+                            >
+                            <div class="recipeOverlay"></div>
+                        </div>
                     </div>
-                </div>
-                <div class="cookbookRecipe">
-                    <h2 class="recipeHeading">
-                        <a 
-                            href="seasonings.html" 
-                            class="recipeLink" 
-                        >
+                </a>
+                <a 
+                    href="seasonings.html" 
+                    class="recipeLink" 
+                >
+                    <div class="cookbookRecipe">
+                        <h2 class="recipeHeading">
                             CSS Seasonings
-                        </a>
-                        <span class="recipeDots"></span>
-                    </h2>
-                    <div class="recipePreview">
-                        <img 
-                            src="images/seasonings.png" 
-                        >
-                        <div class="recipeOverlay"></div>
+                            <span class="recipeDots"></span>
+                        </h2>
+                        <div class="recipePreview">
+                            <img 
+                                src="images/seasonings.png" 
+                            >
+                            <div class="recipeOverlay"></div>
+                        </div>
                     </div>
-                </div>
+                </a>
+                <a 
+                    href="recipes.html" 
+                    class="recipeLink" 
+                >
+                    <div class="cookbookRecipe">
+                        <h2 class="recipeHeading">
+                            Layout Recipes
+                            <span class="recipeDots"></span>
+                        </h2>
+                        <div class="recipePreview">
+                            <img 
+                                src="images/recipes.png" 
+                            >
+                            <div class="recipeOverlay"></div>
+                        </div>
+                    </div>
+                </a>
+                <a 
+                    href="more.html" 
+                    class="recipeLink" 
+                >
+                    <div class="cookbookRecipe">
+                        <h2 class="recipeHeading">
+                            Tutorials and Troubleshooting
+                            <span class="recipeDots"></span>
+                        </h2>
+                        <div class="recipePreview">
+                            <img 
+                                src="images/troubleshooting.png" 
+                            >
+                            <div class="recipeOverlay"></div>
+                        </div>
+                    </div>
+                </a>
             </div>
             <div id="cookbookPageColumnTwo">
                 <div id="previewContainer">
