modifications to support filtering and sorting (pt1)
mainly updating seasonings data to use as a test case, and also correcting some naming terminology in cookbook.js to reflect current usage

--- a/cookbook/seasonings.html
+++ b/cookbook/seasonings.html
@@ -102,6 +102,15 @@
                 </div>
             </div>
         </div>
+
+        <footer id="mealPrepFooter" class="hide">
+            <div class="cookbookButtons">
+                <button id="prevButton" class="disabled">Prev</button>
+                <span id="currentPage">Page 1 of -</span>
+                <button id="nextButton" class="disabled">Next</button>
+            </div>
+        </footer>
+
         <script src="js/seasonings.js"></script>
         <script src="js/cookbook.js"></script>
         <script src="js/hideNav.js"></script>
