updating titles and filenames for sorting

--- a/cookbook/ingredients/horizontalRules.html
+++ b/cookbook/ingredients/horizontalRules.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Horizontal Rule (&lt;hr&gt;) Element</title>
+        <title>&lt;hr&gt; (Horizontal Rule) Element</title>
     </head>
     <body>
         This text is separated by a horizontal rule from the text below it.
