--- a/cookbook/ingredients/orderedLists.html
+++ b/cookbook/ingredients/orderedLists.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Ordered List (&lt;ol&gt;) Element</title>
+        <title>&lt;ol&gt; (Ordered List) Element</title>
     </head>
     <body>
         The ordered list (&lt;ol&gt;) element is always paired with 
