--- a/cookbook/ingredients/spans.html
+++ b/cookbook/ingredients/spans.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Content Span (&lt;span&gt;) Element</title>
+        <title>&lt;span&gt; (Content Span) Element</title>
         <link href="css/spans.css" rel="stylesheet">
     </head>
     <body>
