--- a/cookbook/ingredients/anchors.html
+++ b/cookbook/ingredients/anchors.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Anchor (&lt;a&gt;) Element</title>
+        <title>&lt;a&gt; (Anchor) Element</title>
         <link href="css/anchors.css" rel="stylesheet">
     </head>
     <body>
