--- a/cookbook/ingredients/bolds.html
+++ b/cookbook/ingredients/bolds.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Bold (&lt;b&gt;) Element</title>
+        <title>&lt;b&gt; (Bold) Element</title>
     </head>
     <body>
         This text is not bold.
