--- a/cookbook/ingredients/br.html
+++ b/cookbook/ingredients/br.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Line Break (&lt;br&gt;) Element</title>
+        <title>&lt;br&gt; (Line Break) Element</title>
     </head>
     <body>
         This text is separated by a line break from the text below it.
