--- a/cookbook/ingredients/headings.html
+++ b/cookbook/ingredients/headings.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Heading (&lt;h1&gt; - &lt;h6&gt;) Elements</title>
+        <title>&lt;h1&gt; - &lt;h6&gt; (Heading) Elements</title>
     </head>
     <body>
         <h1>This is an H1 element</h1>
