--- a/cookbook/ingredients/italics.html
+++ b/cookbook/ingredients/italics.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Italics (&lt;i&gt;) Element</title>
+        <title>&lt;i&gt; (Italics) Element</title>
     </head>
     <body>
         This text is not italicized.
