--- a/cookbook/ingredients/paragraphs.html
+++ b/cookbook/ingredients/paragraphs.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Paragraph (&lt;p&gt;) Element</title>
+        <title>&lt;p&gt; (Paragraph) Element</title>
     </head>
     <body>
         <p>
