--- a/cookbook/ingredients/superscripts.html
+++ b/cookbook/ingredients/superscripts.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Superscript (&lt;sup&gt;) Element</title>
+        <title>&lt;sup&gt; (Superscript) Element</title>
     </head>
     <body>
         This text is not superscripted.
