--- a/cookbook/ingredients/unorderedLists.html
+++ b/cookbook/ingredients/unorderedLists.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Unordered List (&lt;ul&gt;) Element</title>
+        <title>&lt;ul&gt; (Unordered List) Element</title>
     </head>
     <body>
         The unordered list (&lt;ul&gt;) element is always paired with 
