--- a/cookbook/seasonings/align-items.html
+++ b/cookbook/seasonings/align-items.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Flexbox: align-items Property</title>
+        <title>align-items Property (Flexbox)</title>
         <link href="css/align-items.css" rel="stylesheet" data-seasoning>
         <link href="css/shared.css" rel="stylesheet">
     </head>
