--- a/cookbook/seasonings/flex-direction.html
+++ b/cookbook/seasonings/flex-direction.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Flexbox: flex-direction Property</title>
+        <title>flex-direction Property (Flexbox)</title>
         <link href="css/flex-direction.css" rel="stylesheet" data-seasoning>
         <link href="css/shared.css" rel="stylesheet">
     </head>
