--- a/cookbook/seasonings/flex.html
+++ b/cookbook/seasonings/flex.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Flexbox: flex Property</title>
+        <title>flex Property (Flexbox)</title>
         <link href="css/flex.css" rel="stylesheet" data-seasoning>
         <link href="css/shared.css" rel="stylesheet">
     </head>
