--- a/cookbook/seasonings/grid-template-areas.html
+++ b/cookbook/seasonings/grid-template-areas.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Grid: grid-template-areas Property</title>
+        <title>grid-template-areas Property (Grid)</title>
         <link href="css/grid-template-areas.css" rel="stylesheet" data-seasoning>
         <link href="css/shared.css" rel="stylesheet">
     </head>
