--- a/cookbook/seasonings/justify-content.html
+++ b/cookbook/seasonings/justify-content.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Flexbox: justify-content Property</title>
+        <title>justify-content Property (Flexbox)</title>
         <link href="css/justify-content.css" rel="stylesheet" data-seasoning>
         <link href="css/shared.css" rel="stylesheet">
     </head>
